fixed nav overflow

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -221,6 +221,15 @@ app-nav-page{
         display: block;
     }
 
+    .margin-128{
+        margin-top: 128px;
+    }
+
+    .padding-zero-nav{
+        padding: 0 !important;
+        overflow-y: hidden;
+    }
+
     .space{
         display: block !important;
     }
