--- a/src/styles.scss
+++ b/src/styles.scss
@@ -185,7 +185,7 @@ h5{
 
 .dark-btn:hover{
     @include darkButton();
-    background-color: #363636;
+    background-color: #474747;
 }
 
 .light-btn {
@@ -220,6 +220,12 @@ body{
 .fixed {
     position: fixed;
 }
+
+// .collapse
+// {
+//     position: absolute;
+//     z-index: 1;
+// }
 
 
 
